logs/Slang/generated/keywords/5.6.2--keyword_automatic.sv.log
name: keyword_automatic
description: The 'automatic' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_automatic.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_automatic.sv:8:8: error: expected declarator
    bit automatic;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_automatic.sv:8:18: error: expected data type (implicit type name not allowed)
    bit automatic;
                 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_automatic.sv:8:18: error: expected declarator
    bit automatic;
                 ^
